--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: poppins;
-  src: url("/fonts/Poppins-Medium.ttf");
+  src: url("fonts/Poppins-Medium.ttf");
 }
 @font-face {
   font-family: bigheader;
-  src: url("/fonts/HeadingNowTrial-38Heavy.ttf");
+  src: url("fonts/HeadingNowTrial-38Heavy.ttf");
 }
 /*** BASE RULES START ***/
 * {
