--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px;
+  padding: 30px 40px;
   position: fixed;
   z-index: 1;
 }
