--- a/style.css
+++ b/style.css
@@ -367,6 +367,7 @@ h6 {
 }
 #problems h1 {
   font-size: 54px;
+  line-height: 50px;
   font-weight: 900;
   font-family: bigheader;
   text-transform: uppercase;
@@ -381,7 +382,7 @@ h6 {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   gap: 50px;
 }
 #problems-part--2 img {
@@ -397,9 +398,18 @@ h6 {
   font-size: 48px;
   margin-top: 30px;
 }
+#problems p {
+  font-weight: 100;
+  font-size: 20px;
+}
+#problems h3 {
+  font-size: 34px;
+  font-weight: 900;
+  font-family: cta;
+}
 #problems span {
   color: var(--primary-blue);
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 900;
 }
 #problems span.danger {
@@ -535,7 +545,7 @@ textarea {
 .sales-growth--item p span {
   font-weight: 900;
 }
-#sales-growth--btn a button {
+#sales-growth--2 #cta-div #contactBtn a button {
   font-size: 48px;
   font-weight: 900;
   background-color: aqua;
@@ -547,10 +557,30 @@ textarea {
   font-family: cta;
   box-shadow: 7px 7px 0px -3px rgba(0, 0, 0, 0.4);
 }
-#sales-growth--btn a button:hover {
+#sales-growth--2 #cta-div #pricingBtn a button {
+  font-size: 48px;
+  font-weight: 900;
+  background-color: aqua;
+  border: 1px solid var(--primary-green);
+  border-radius: 10px;
+  padding: 8px 20px;
+  margin-top: 45px;
+  text-transform: uppercase;
+  font-family: cta;
+  box-shadow: 7px 7px 0px -3px rgba(0, 0, 0, 0.4);
+}
+
+#sales-growth--2 #cta-div #contactBtn a button:hover {
   scale: 1.01;
   cursor: pointer;
   background-color: aqua;
+  color: #000;
+}
+#sales-growth--2 #cta-div #pricingBtn a button:hover {
+  scale: 1.01;
+  cursor: pointer;
+  background-color: aqua;
+  color: #000;
 }
 
 /*** SALES SECTION END ***/
@@ -919,6 +949,7 @@ textarea {
   }
   #problems h1 {
     font-size: 28px;
+    line-height: 26px;
     font-weight: 900;
     font-family: cta;
     text-transform: uppercase;
@@ -942,16 +973,25 @@ textarea {
     width: 120px;
   }
   #problems #contactBtn a button {
-    font-size: 30px;
+    font-size: 26px;
     margin-top: 30px;
   }
   #problems #pricingBtn a button {
-    font-size: 30px;
-    margin-top: 30px;
+    font-size: 26px;
+    margin-top: 10px;
+  }
+  #problems p {
+    font-weight: 100;
+    font-size: 14px;
+  }
+  #problems h3 {
+    font-size: 22px;
+    font-weight: 900;
+    font-family: cta;
   }
   #problems span {
     color: var(--primary-blue);
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 900;
   }
   #problems span.danger {
@@ -1024,7 +1064,7 @@ textarea {
     text-align: left;
     font-size: 12px;
   }
-  #sales-growth--btn a button {
+  #sales-growth--2 #cta-div #contactBtn a button {
     font-size: 26px;
     font-weight: 900;
     border-radius: 10px;
@@ -1032,7 +1072,19 @@ textarea {
     margin-top: 45px;
     box-shadow: 5px 5px 0px -3px rgba(0, 0, 0, 0.4);
   }
-  #sales-growth--btn a button:hover {
+  #sales-growth--2 #cta-div #pricingBtn a button {
+    font-size: 26px;
+    font-weight: 900;
+    border-radius: 10px;
+    padding: 6px 14px;
+    margin-top: 10px;
+    box-shadow: 5px 5px 0px -3px rgba(0, 0, 0, 0.4);
+  }
+  #sales-growth--2 #cta-div #contactBtn a button:hover {
+    scale: 1.01;
+    cursor: pointer;
+  }
+  #sales-growth--2 #cta-div #pricingBtn a button:hover {
     scale: 1.01;
     cursor: pointer;
   }
@@ -1063,7 +1115,7 @@ textarea {
   }
   #plan-container #contactBtn a button {
     padding: 10px 28px;
-    font-size: 28px;
+    font-size: 26px;
     cursor: pointer;
     display: inline-block;
     letter-spacing: 0.5px;
@@ -1071,7 +1123,7 @@ textarea {
   }
   #plan-container #pricingBtn a button {
     padding: 10px 28px;
-    font-size: 28px;
+    font-size: 26px;
     cursor: pointer;
     display: inline-block;
     letter-spacing: 0.5px;
@@ -1168,10 +1220,10 @@ textarea {
     padding-bottom: 30px;
   }
   #about-page #contactBtn a button {
-    font-size: 30px;
+    font-size: 26px;
   }
   #about-page #pricingBtn a button {
-    font-size: 30px;
+    font-size: 26px;
   }
 
   /*** ABOUT PAGE END ***/
@@ -1513,59 +1565,6 @@ textarea {
 
   /*** ABOUT PAGE END ***/
 
-  /*** PROCESS PAGE START ***/
-  #process-page {
-    padding-top: 100px;
-  }
-  /*** PROCESS PAGE END ***/
-
-  /*** PROCESS SECTION START ***/
-  #process {
-    margin-top: -250px;
-  }
-
-  .process-div {
-    align-items: center;
-  }
-
-  .process-div--item {
-    padding: 15px;
-    align-items: center;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-
-  .process-item--1 span {
-    font-size: 18px;
-    background-color: #dadada;
-    color: #000;
-    border-radius: 50%;
-    padding: 10px 20px;
-  }
-  .process-item--1 h1 {
-    font-size: 18px;
-    font-weight: 500;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    color: var(--primary-green);
-  }
-  .process-item--1 p {
-    font-size: 12px;
-    font-weight: 100;
-    color: var(--secondary-grey);
-    text-align: left;
-    margin-bottom: 20px;
-  }
-
-  .process-item--2 img {
-    width: 150px;
-    height: 120px;
-    object-fit: cover;
-  }
-
-  /*** PROCESS SECTION END ***/
-
   /*** CONTACT START ***/
 
   #contact-heading {
@@ -1725,7 +1724,7 @@ textarea {
   }
   #home-part--1 #contact a button {
     padding: 12px 24px;
-    font-size: 18px;
+    font-size: 30px;
     cursor: pointer;
     display: inline-block;
   }
@@ -1842,7 +1841,15 @@ textarea {
   }
   #plan-container #contactBtn a button {
     padding: 10px 28px;
-    font-size: 28px;
+    font-size: 30px;
+    cursor: pointer;
+    display: inline-block;
+    letter-spacing: 0.5px;
+    font-weight: 900;
+  }
+  #plan-container #pricingBtn a button {
+    padding: 10px 28px;
+    font-size: 30px;
     cursor: pointer;
     display: inline-block;
     letter-spacing: 0.5px;
@@ -2046,7 +2053,10 @@ textarea {
     padding-top: 30px;
     padding-bottom: 30px;
   }
-  #about-cta #contactBtn a button {
+  #about-page #cta-div #contactBtn a button {
+    font-size: 38px;
+  }
+  #about-page #cta-div #pricingBtn a button {
     font-size: 38px;
   }
 
@@ -2284,7 +2294,7 @@ textarea {
   }
   #home-part--1 #contactBtn a button {
     padding: 12px 24px;
-    font-size: 28px;
+    font-size: 34px;
     font-family: cta;
     cursor: pointer;
     display: inline-block;
@@ -2332,8 +2342,13 @@ textarea {
     height: 150px;
     width: 120px;
   }
-  #problems #contactBtn a button {
-    font-size: 40px;
+  #problems #cta-div #contactBtn a button {
+    font-size: 34px;
+    margin-top: 30px;
+    font-family: cta;
+  }
+  #problems #cta-div #pricingBtn a button {
+    font-size: 34px;
     margin-top: 30px;
     font-family: cta;
   }
@@ -2410,20 +2425,51 @@ textarea {
     text-align: left;
     font-size: 13px;
   }
-  #sales-growth--btn a button {
-    font-size: 34px;
-    font-weight: 600;
+  #sales-growth--2 #cta-div #contactBtn a button {
+    font-size: 36px;
+    font-weight: 900;
     border-radius: 10px;
     padding: 8px 16px;
-    margin-top: 45px;
-    box-shadow: 7px 7px 0px -3px rgba(0, 0, 0, 0.4);
+    box-shadow: 5px 5px 0px -3px rgba(0, 0, 0, 0.4);
   }
-  #sales-growth--btn a button:hover {
+  #sales-growth--2 #cta-div #pricingBtn a button {
+    font-size: 36px;
+    font-weight: 900;
+    border-radius: 10px;
+    padding: 8px 16px;
+    box-shadow: 5px 5px 0px -3px rgba(0, 0, 0, 0.4);
+  }
+  #sales-growth--2 #cta-div #contactBtn a button:hover {
+    scale: 1.01;
+    cursor: pointer;
+  }
+  #sales-growth--2 #cta-div #pricingBtn a button:hover {
     scale: 1.01;
     cursor: pointer;
   }
 
   /*** SALES SECTION END ***/
+
+  /*** PLAN SECTION START ***/
+
+  #plan-container #contactBtn a button {
+    padding: 10px 28px;
+    font-size: 36px;
+    cursor: pointer;
+    display: inline-block;
+    letter-spacing: 0.5px;
+    font-weight: 900;
+  }
+  #plan-container #pricingBtn a button {
+    padding: 10px 28px;
+    font-size: 36px;
+    cursor: pointer;
+    display: inline-block;
+    letter-spacing: 0.5px;
+    font-weight: 900;
+  }
+
+  /*** PLAN SECTION END ***/
 
   /*** ABOUT SECTION START ***/
 
